small changes in MovieController